--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,3 +1,55 @@
 .footer {
-
+    background-color: black;
+    /*color: white;*/
+    height: 100%;
 }
+
+.footer-container {
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+
+.farmer {
+    background-color: #baed91;
+}
+
+.exporter {
+    background-color: #b2cefe;
+}
+
+.importer {
+    background-color: #f8b88b;
+}
+
+.consumer {
+    background-color: #f2a2e8;
+}
+
+.footer-left-box {
+    grid-column: 1;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    /*background-color: greenyellow;*/
+}
+
+.footer-right-box {
+    grid-column: 2;
+    margin-right: 10px;
+    /*padding: 10px 0;*/
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    /*background-color: purple;*/
+}
+
+.footer-right-box-item {
+    flex: 1;
+}
+
+.footer-right-gone {
+    display: none;
+}
+
+
