--- a/src/views/view.css
+++ b/src/views/view.css
@@ -6,26 +6,26 @@
   font-weight: 300;
 }
 
+.brand-logo {
+  font-size: 1.8rem !important;
+}
+
 .bodyImg {
   z-index: 26;
   height: 100px;
   width: 100px;
 }
 
-.titleText{
-  font-size: 100%
-}
-
-.mainDiv {
+.containerDiv {
   text-align: left;
   line-height: 0.8;
 }
 
-.text1 {
+.text {
   font-size: 18px;
 }
 
-.text2 {
+.subText {
   font-size: 13px;
 }
 
@@ -42,7 +42,27 @@
   border-radius: 4px; 
   z-index: 54;
   height: 38px;
-  width: 65px;
+  width: 60px;
+}
+
+.heading {
+  margin-top: 15px;
+  margin-bottom: 0;
+  font-size: 150%
+}
+
+.subHeading {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 120%;
+}
+
+.customStyle {
+  padding-top: 20px;
+}
+
+.pad-top{ 
+  padding-top: 8px !important;
 }
 
 @media only screen and (max-width: 600px) {
