Item History Module: Updated the view of item history

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ Vertical Timeline - by CodyHouse.co
 }
 
 .cd-timeline__img.cd-timeline__img--picture {
-  background: #75ce66;
+  background: #3B8374;
 }
 
 .cd-timeline__img.cd-timeline__img--movie {
