Item History Module: Updated the view of item history added image

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@ Vertical Timeline - by CodyHouse.co
 
 -------------------------------- */
 
+.itemHistory .itemImage{
+  width: 200px;
+}
+
 .cd-timeline {
   overflow: hidden;
   margin: 2em auto;
