--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   height: 40vmin;
 }
 
+.brand-logo {
+  font-size: 1.8rem !important;
+}
+
 .App-header {
   background-color: #0C8573;
   min-height: 100vh;
